media-keys: Update gnome-media cut'n'paste code

https://bugzilla.gnome.org/show_bug.cgi?id=612024