plugins/media-keys/cut-n-paste/gvc-channel-map.h
@@ -60,20 +60,22 @@ GType                   gvc_channel_map_get_type                (void);
 
 GvcChannelMap *         gvc_channel_map_new                     (void);
 GvcChannelMap *         gvc_channel_map_new_from_pa_channel_map (const pa_channel_map *map);
-guint                   gvc_channel_map_get_num_channels        (GvcChannelMap  *map);
+guint                   gvc_channel_map_get_num_channels        (const GvcChannelMap  *map);
 const gdouble *         gvc_channel_map_get_volume              (GvcChannelMap  *map);
-gboolean                gvc_channel_map_can_balance             (GvcChannelMap  *map);
-gboolean                gvc_channel_map_can_fade                (GvcChannelMap  *map);
-gboolean                gvc_channel_map_has_lfe                 (GvcChannelMap  *map);
+gboolean                gvc_channel_map_can_balance             (const GvcChannelMap  *map);
+gboolean                gvc_channel_map_can_fade                (const GvcChannelMap  *map);
+gboolean                gvc_channel_map_has_position            (const GvcChannelMap  *map,
+                                                                 pa_channel_position_t position);
+#define                 gvc_channel_map_has_lfe(x)              gvc_channel_map_has_position (x, PA_CHANNEL_POSITION_LFE)
 
 void                    gvc_channel_map_volume_changed          (GvcChannelMap    *map,
                                                                  const pa_cvolume *cv,
                                                                  gboolean          set);
-const char *            gvc_channel_map_get_mapping             (GvcChannelMap  *map);
+const char *            gvc_channel_map_get_mapping             (const GvcChannelMap  *map);
 
 /* private */
-const pa_cvolume *      gvc_channel_map_get_cvolume             (GvcChannelMap  *map);
-const pa_channel_map *  gvc_channel_map_get_pa_channel_map      (GvcChannelMap  *map);
+const pa_cvolume *      gvc_channel_map_get_cvolume             (const GvcChannelMap  *map);
+const pa_channel_map *  gvc_channel_map_get_pa_channel_map      (const GvcChannelMap  *map);
 G_END_DECLS
 
 #endif /* __GVC_CHANNEL_MAP_H */
